--- a/Netowork Programming/Netowork Programming.vcxproj
+++ b/Netowork Programming/Netowork Programming.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{285aaa5a-81dd-4991-9af3-efcbc2ac40c9}</ProjectGuid>
     <RootNamespace>NetoworkProgramming</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Network Programming - Server</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
